[tool.poetry]
name = "rctab-controller-function"
version = "0.1.0"  # Do not change
description = "Function app to control (enable/disable) Azure subscriptions"
authors = []
packages = [
    {include = "controller"},
]

[tool.poetry.dependencies]
python = "^3.10"
azure-functions = "^1.19.0"
azure-identity = "^1.16.0"
azure-mgmt-resource = "^23.1.1"
azure-mgmt-subscription = "^3.1.1"
opencensus-ext-azure = "^1.1.13"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
PyJWT = {extras = ["crypto"], version = "^2.8.0"}
requests = "^2.31.0"
rctab_models = { git = "https://github.com/alan-turing-institute/rctab-models", tag = "0.1.0" }

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
coverage = "^7.5.1"
flake8 = "^3.9.2"
isort = "^5.13.2"
mypy = "^1.10.0"
pylint = "^3.2.0"
pylint-absolute-imports = "^1.1.0"
types-requests = "^2.31.0.20240406"  # Should match requests version

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
