[tool.poetry]
name = "rctab-functions-docs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rctab_functions_docs"}]

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
sphinxcontrib-napoleon = "^0.7"
myst-parser = "^2.0.0"
rctab-controller-function = {path = "../controller_function"}
rctab-status-function = {path = "../status_function"}
usage-function = {path = "../usage_function"}
rctab-usage-function = {path = "../usage_function"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
