[tool.poetry]
name = "rctab-status-function"
version = "0.1.0"  # Do not change
description = "Function app to collect status data"
authors = []
packages = [
    {include = "status"},
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
azure-functions = "^1.7.2"
azure-mgmt-subscription = "^1.0.0"
azure-identity = "^1.6.1"
PyJWT = {extras = ["crypto"], version = "^2.1.0"}
requests = "^2.26.0"
azure-mgmt-authorization = "^2.0.0"
azure-graphrbac = "^0.61.1"
opencensus-ext-azure = "^1.1.7"


[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.8b0"
coverage = "^5.5"
pylint = "^2.10.2"
pulumi = "^3.12.0"
pulumi-azure = "^4.18.0"

[tool.poetry.group.dev.dependencies]
pylint-absolute-imports = "^1.0.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
