[tool.poetry]
name = "rctab-status-function"
version = "0.1.0"  # Do not change
description = "Function app to collect status data"
authors = []
packages = [
    {include = "status"},
]

[tool.poetry.dependencies]
python = "^3.10"
azure-functions = "^1.23.0"
azure-identity = "^1.21.0"
azure-mgmt-authorization = "^4.0.0"
azure-mgmt-subscription = "^3.1.1"
msgraph-sdk = "^1.28.0"
opencensus-ext-azure = "^1.1.14"
pydantic = "^2.11.3"
pydantic-settings = "^2.8.1"
PyJWT = {extras = ["crypto"], version = "^2.10.1"}
requests = "^2.32.3"
rctab_models = { git = "https://github.com/alan-turing-institute/rctab-models", tag = "0.1.0" }

[tool.poetry.group.dev.dependencies]
coverage = "^7.8.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pylint = "^3.3.6"
pylint-absolute-imports = "^1.1.0"
types-requests = "^2.32.0.20250328"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
