[tool.poetry]
name = "rctab-usage-function"
version = "0.1.0"  # Do not change
description = "Function app to collect usage data"
authors = []
packages = [
    {include = "usage"},
    {include = "utils"},
#    {include = "costmanagement"},
    {include = "monthly_usage"},
]

[tool.poetry.dependencies]
python = "^3.10"
azure-mgmt-consumption = "^8.0.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
azure-functions = "^1.7.2"
azure-mgmt-subscription = "^1.0.0"
azure-identity = "^1.6.1"
PyJWT = {extras = ["crypto"], version = "^2.1.0"}
requests = "^2.26.0"
azure-mgmt-managementgroups = "^1.0.0"
azure-mgmt-costmanagement = "^3.0.0"
opencensus-ext-azure = "^1.1.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.8b0"
coverage = "^5.5"
pre-commit = "^2.15.0"
pylint = "^2.10.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pylint-absolute-imports = "^1.0.1"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240125"

[tool.black]
line-width = 88

#[tool.setuptools]
#py-modules = []

#[tool.setuptools.packages.find]
#where = ["."]
#include = ["costmanagement", "usage", "monthly_usage", "utils"]
#include = ["usage_function"]
#exclude = []
#namepsaces = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
